<resources>
    <string name="app_name">Animation Samples</string>
    <string name="main">Main</string>
    <string name="animate">Animate</string>
    <string name="title_view_anim_xml">View Animation with XML</string>
    <string name="title_view_anim_kotlin">View Animation with Kotlin</string>
    <string name="title_frame_anim">Frame Animation</string>
    <string name="title_object_animator">Animation via Object Animator and Animator Set</string>
    <string name="title_interpolator_object_animator">Animation with Interpolators</string>
    <string name="title_transition_shared_elements">Transition Framework with Shared Elements</string>
    <string name="title_transition_scenes">Transition Framework with Scenes</string>
    <string name="title_lottie">Lottie – After Effects animations</string>
    <string name="reload">Reload</string>
    <string name="reload_screen">Reloading screen…</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="play_together">Play Together</string>
    <string name="sequentially">Sequentially</string>
    <string name="bounce">Bounce</string>
    <string name="overshoot">Overshoot</string>
    <string name="accelerate">Accelerate</string>
    <string name="fastoutslowin">FastOutSlowIn</string>
    <string name="next">Next</string>
    <string name="title">Lorem Ipsum</string>
    <string name="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mauris felis, vulputate
        vitae est sed, venenatis hendrerit leo. Praesent faucibus quis libero ac blandit. Cras id tellus eu justo
        sagittis lacinia ac ut ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus
        mus. Maecenas aliquam venenatis eleifend. Curabitur lorem orci, maximus et justo vitae, finibus lacinia dolor.
        Nullam non tristique mauris, eget tempor urna. Vivamus vel ornare dui, at tincidunt dui. Donec lectus tortor,
        lobortis at diam in, tincidunt hendrerit ex. Nunc aliquam lectus ut efficitur pulvinar. Lorem ipsum dolor sit
        amet, consectetur adipiscing elit. Nunc hendrerit felis in faucibus tincidunt. Aenean facilisis lectus sed justo
        tincidunt, nec elementum ligula laoreet.
    </string>
    <string name="scene_2">Scene 2</string>
    <string name="scene_1">Scene 1</string>
    <string name="loading_from_json">Loading from json</string>
</resources>
