<?xml version="1.0" encoding="utf-8"?>
<navigation
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/navigation_graph"
        app:startDestination="@id/mainFragment">

    <fragment android:id="@+id/mainFragment"
              android:label="@string/app_name"
              tools:layout="@layout/fragment_home"
              android:name="io.github.maikotrindade.animationsamples.home.HomeFragment">

        <action
                android:id="@+id/action_viewAnimFragment"
                app:destination="@id/viewAnimFragment"/>
        <action
                android:id="@+id/action_viewAnimKotlinFragment"
                app:destination="@id/viewAnimKotlinFragment"/>
        <action
                android:id="@+id/action_frameAnimFragment"
                app:destination="@id/frameAnimFragment"/>
        <action
                android:id="@+id/action_objectAnimatorFragment"
                app:destination="@id/objectAnimatorFragment"/>
        <action
                android:id="@+id/action_interpolatorObjAnimFragment"
                app:destination="@id/interpolatorObjectAnimFragment"/>
    </fragment>


    <fragment android:id="@+id/viewAnimFragment"
              android:label="@string/title_view_anim_xml"
              tools:layout="@layout/fragment_view_animation"
              android:name="io.github.maikotrindade.animationsamples.ui.ViewAnimationXMLFragment"/>

    <fragment android:id="@+id/viewAnimKotlinFragment"
              android:label="@string/title_view_anim_kotlin"
              tools:layout="@layout/fragment_view_animation_kotlin"
              android:name="io.github.maikotrindade.animationsamples.ui.ViewAnimationKotlinFragment"/>

    <fragment android:id="@+id/frameAnimFragment"
              android:label="@string/title_frame_anim"
              tools:layout="@layout/fragment_frame_animation"
              android:name="io.github.maikotrindade.animationsamples.ui.FrameAnimationFragment"/>

    <fragment android:id="@+id/objectAnimatorFragment"
              android:label="@string/title_object_animator"
              tools:layout="@layout/fragment_object_animator"
              android:name="io.github.maikotrindade.animationsamples.ui.ObjectAnimatorFragment"/>

    <fragment android:id="@+id/interpolatorObjectAnimFragment"
              android:label="@string/title_interpolator_object_animator"
              tools:layout="@layout/fragment_interpolator_object_anim"
              android:name="io.github.maikotrindade.animationsamples.ui.InterpolatorObjectAnimFragment"/>
</navigation>